add typescript directly into browser

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
     .bg-dan{
       color: white;
-      background-color: #b01f00; 
+      background-color: #b01f00;
     }
     table, th, td{
       border: 1px solid black;
@@ -33,6 +33,11 @@
         <div class="col">
         <div id="app"></div>
         </div>
+        <script src="strongtyping.ts" type="text/typescript"></script>
+        <!-- for info see https://github.com/basarat/typescript-script -->
+        <script src="https://rawgit.com/Microsoft/TypeScript/master/lib/typescriptServices.js"></script>
+        <script src="https://rawgit.com/basarat/typescript-script/master/transpiler.js"></script>
+
         <script src="devcalc.jsx" type="text/babel"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.8.6/umd/react.development.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.6/umd/react-dom.development.js"></script>
